[fix/#120] 엔티티 매핑 -> DB 집계로 변경